--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.serverless</groupId>
-  <artifactId>hello</artifactId>
+  <artifactId>person-api</artifactId>
   <packaging>jar</packaging>
   <version>dev</version>
-  <name>hello</name>
+  <name>person-api</name>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -14,20 +14,11 @@
   </properties>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-lambda-java-log4j -->
     <dependency>
       <groupId>com.amazonaws</groupId>
-      <artifactId>aws-lambda-java-log4j2</artifactId>
-      <version>1.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>2.8.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-      <version>2.8.2</version>
+      <artifactId>aws-lambda-java-log4j</artifactId>
+      <version>1.0.1</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -44,6 +35,13 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.9.10</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-dynamodb -->
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-dynamodb</artifactId>
+      <version>1.11.964</version>
+    </dependency>
+
   </dependencies>
 
   <build>
