--- a/serverless.yml
+++ b/serverless.yml
@@ -86,12 +86,12 @@ resources:
         AttributeDefinitions:
           - AttributeName: id
             AttributeType: S
-          - AttributeName: name
+          - AttributeName: firstName
             AttributeType: S
         KeySchema:
           - AttributeName: id
             KeyType: HASH
-          - AttributeName: name
+          - AttributeName: firstName
             KeyType: RANGE
         ProvisionedThroughput:
           ReadCapacityUnits: 1
